--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "testBuild": "webpack --config webpack.dev.js",
     "dev": "webpack serve --open --config webpack.dev.js",
     "deploy": "git subtree push --prefix dist origin gh-pages",
-    "setup": "npm install --save-dev html-webpack-plugin webpack webpack-cli webpack-dev-server style-loader css-loader html-loader"
+    "setup": "npm install --save-dev html-webpack-plugin webpack webpack-cli webpack-dev-server style-loader css-loader html-loader eslint @eslint/js",
+    "lintsrc": "npx eslint src"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.12.0",
     "css-loader": "^7.1.2",
+    "eslint": "^9.12.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.0",
     "style-loader": "^4.0.0",
