--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "testBuild": "webpack --config webpack.dev.js",
     "dev": "webpack serve --open --config webpack.dev.js",
     "deploy": "git subtree push --prefix dist origin gh-pages",
-    "setup": "npm install --save-dev html-webpack-plugin webpack webpack-cli webpack-dev-server style-loader css-loader html-loader eslint @eslint/js --save-exact prettier",
+    "setup": "npm install --save-dev html-webpack-plugin webpack webpack-cli webpack-dev-server style-loader jest css-loader html-loader eslint @eslint/js --save-exact prettier",
     "lintsrc": "npx eslint src",
     "formatsrc": "npx prettier src --write"
   },
@@ -22,6 +22,7 @@
     "eslint": "9.12.0",
     "html-loader": "5.1.0",
     "html-webpack-plugin": "5.6.0",
+    "jest": "^29.7.0",
     "prettier": "3.3.3",
     "style-loader": "4.0.0",
     "webpack": "5.95.0",
